Bug 516302 - nsWifiMonitor::DoScan spins in a tight loop on error r=blassey a=jst